--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<main aria-live='assertive'>
-		<h1>Search Youtube</h1>
+		<h1>Thinkful Tube</h1>
 		<form class="search-form">
 			<input type="text" class="input-box" aria-label="Search Field">
 			<button type="submit">Search Videos</button>
